examples/invalid/test26.alice
The looking-glass hatta ()
opened

closed

The looking-glass hatta ()
opened 

closed
